<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        style="@style/MenuBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:backgroundTint="?attr/pop_up_menu_line"
                android:minWidth="70dp"
                android:minHeight="7dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:id="@+id/constraintLayout_sort_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ascending"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/ButtonSortByStyle"
                    android:layout_marginEnd="5dp"
                    android:text="@string/ascending"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/descending"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/ButtonSortByStyle"
                    android:layout_marginStart="5dp"
                    android:text="@string/descending"
                    android:layout_weight="1"/>

            </LinearLayout>




            <LinearLayout
                android:id="@+id/constraintLayout_sort_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_sort_type"
                tools:layout_editor_absoluteX="20dp">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    style="@style/CardViewSortByStyle"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/name_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@color/text_main_dark"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"/>

                        <CheckBox
                            android:id="@+id/name_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/CheckBoxSortByStyle"
                            app:buttonTint="?attr/main_color"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"/>

                    </RelativeLayout>


                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_date"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    style="@style/CardViewSortByStyle"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/date_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textColor="@color/text_main_dark"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"/>

                        <CheckBox
                            android:id="@+id/date_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/CheckBoxSortByStyle"
                            app:buttonTint="?attr/main_color"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"/>

                    </RelativeLayout>



                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView_duration"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    style="@style/CardViewSortByStyle"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/duration_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/duration"
                            android:textColor="@color/text_main_dark"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"/>

                        <CheckBox
                            android:id="@+id/duration_check_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/CheckBoxSortByStyle"
                            app:buttonTint="?attr/main_color"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"/>

                    </RelativeLayout>


                </com.google.android.material.card.MaterialCardView>



            </LinearLayout>





            <LinearLayout
                android:id="@+id/constraintLayout_management"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/ButtonSortByStyle"
                    android:layout_marginEnd="5dp"
                    android:text="@string/clear"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/apply_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/ButtonSortByStyle"
                    android:layout_marginStart="5dp"
                    android:text="@string/apply"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>