<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded"
    android:backgroundTint="?attr/pop_up_menu_background"
    android:paddingBottom="20dp"
    android:layout_marginBottom="15dp"
    android:layout_marginHorizontal="15dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:backgroundTint="?attr/pop_up_menu_line"
            android:minWidth="70dp"
            android:minHeight="7dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_sort_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

            <Button
                android:id="@+id/ascending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ButtonSortByStyle"
                android:layout_marginEnd="5dp"
                android:text="@string/ascending"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/descending"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1" />

            <Button
                android:id="@+id/descending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ButtonSortByStyle"
                android:layout_marginStart="5dp"
                android:text="@string/descending"
                app:layout_constraintStart_toEndOf="@+id/ascending"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1" />


        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_sort_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_sort_type"
            tools:layout_editor_absoluteX="20dp">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CardViewSortByStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/text_main_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/name_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CheckBoxSortByStyle"
                        app:buttonTint="?attr/main_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CardViewSortByStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_name">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/text_main_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/date_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CheckBoxSortByStyle"
                        app:buttonTint="?attr/main_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>



            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView_duration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CardViewSortByStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_date">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/duration_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textColor="@color/text_main_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/duration_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CheckBoxSortByStyle"
                        app:buttonTint="?attr/main_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>



        </androidx.constraintlayout.widget.ConstraintLayout>





        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_sort_name">

            <Button
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ButtonSortByStyle"
                android:layout_marginEnd="5dp"
                android:text="@string/clear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/apply_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"/>

            <Button
                android:id="@+id/apply_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/ButtonSortByStyle"
                android:layout_marginStart="5dp"
                android:text="@string/apply"
                app:layout_constraintStart_toEndOf="@+id/clear_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_weight="1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</LinearLayout>