<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded"
    android:backgroundTint="?attr/pop_up_menu_background"
    android:paddingBottom="20dp"
    android:layout_marginBottom="15dp"
    android:layout_marginHorizontal="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded"
            android:backgroundTint="?attr/pop_up_menu_line"
            android:minWidth="70dp"
            android:minHeight="7dp"
            android:layout_gravity="center_horizontal"/>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sort_by_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewVideoListMenu"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/sort_by" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/sort_by"
                    android:textColor="@color/text_main_dark"
                    android:textSize="20sp" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/de_select_all_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewVideoListMenu"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/check_all" />

                <TextView
                    android:id="@+id/de_select_all_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/select_all"
                    android:textColor="@color/text_main_dark"
                    android:textSize="20sp" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/rename_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewVideoListMenu"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/trash" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/rename"
                    android:textColor="@color/text_main_dark"
                    android:textSize="20sp" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/delete_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewVideoListMenu"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="#00FFFFFF"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:padding="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/trash"
                    app:tint="@color/red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/delete"
                    android:textColor="@color/text_main_dark"
                    android:textSize="20sp" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


</LinearLayout>